--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,8 @@
     <meta charset="utf-8">
     <title>Air pollution checker</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <!--<link rel="stylesheet" href="styles.css">-->
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Raleway:ital,wght@1,900&display=swap" rel="stylesheet">
   </head>
   <body>
     
@@ -41,7 +40,7 @@
         <div class="row">
           <div class="locationInsertAndButtonRow col-sm">
             <input id="locationInsertInputText" class="locationInsertInputText" type="text"></input> 
-            <input id="locationCheckButton" class="locationCheckButton" type="submit" value="Check Location"></input> 
+            <button id="locationCheckButton" class="button locationCheckButton">Check Location</button>
           </div>
         </div>
         <div class="row">
@@ -51,7 +50,7 @@
         </div>
         <div class="row">
           <div class="currentLocationCheckButton col-sm">
-            <input id="currentLocationCheckButton" type="submit" value="Check current location"></input>
+            <button id="currentLocationCheckButton" class="button">Check current location</button>
           </div>
         </div>
       </div>
@@ -109,7 +108,7 @@
         </div>
         <div class="row">
           <div class="checkAnoterLocationButtonClass col-sm">
-            <button id="checkAnoterLocationButton">Check another location</button>
+            <button id="checkAnoterLocationButton" class="button">Check another location</button>
           </div>
         </div>
       </div>
