final version plus fixes

--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,10 @@
     <title>Air pollution checker</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
-
+<!--
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Rammetto+One&family=Roboto&display=swap" rel="stylesheet">
-
+-->
   </head>
   <body>
     
@@ -86,6 +86,26 @@
         <div class="row">
           <div class="detailsClass col-sm">
             <p class="detailsTextClass"> Details: </p>
+          </div>
+        </div>
+        <div class="iaqiHeaderRow row">
+          <div class="iaqiHeaderCol col-sm">
+            <p class="colCellHeaderText">pm25</p>
+          </div>
+          <div class="iaqiHeaderCol col-sm">
+            <p class="colCellHeaderText">pm10</p>
+          </div>
+          <div class="iaqiHeaderCol col-sm">
+            <p class="colCellHeaderText">o3</p>
+          </div>
+          <div class="iaqiHeaderCol col-sm">
+            <p class="colCellHeaderText">no2</p>
+          </div>
+          <div class="iaqiHeaderCol col-sm">
+            <p class="colCellHeaderText">so2</p>
+          </div>
+          <div class="iaqiHeaderCol col-sm">
+            <p class="colCellHeaderText">co</p>
           </div>
         </div>
         <div class="iaqiRow row">
